--- a/portfolio.html
+++ b/portfolio.html
@@ -55,7 +55,7 @@
                <div id="fh5co-page">
                   <a href="#" class="js-fh5co-nav-toggle fh5co-nav-toggle" alt="Toggle"><i></i></a>
                   <aside id="fh5co-aside" role="complementary" class="border js-fullheight">
-                     <h1 id="fh5co-logo"><a href="index.html" alt="Website logo of Napoleon"><img src="images/logo.png" alt=""></a></h1>
+                     <h1 id="fh5co-logo"><a href="index.html" alt="Website logo of Napoleon"><img src="images/logo.png" alt="Website logo of Napoleon"></a></h1>
                      <nav id="fh5co-main-menu" role="navigation">
                         <ul>
                            <li><a href="index.html" alt="Home">Home</a></li>
@@ -81,7 +81,7 @@
                            </ol>
                         </nav>
                         <h2 class="fh5co-heading animate-box" data-animate-effect="fadeInLeft">Items</span></h2>
-                        <p class="row animate-box" id="itemsDescription">We have collected <mark style="background-color: #cc0000; opacity:0.8; color:white;">10 items</mark>, mixing <mark style="background-color: #cc0000; opacity:0.8; color:white;">archival documents</mark>, <mark style="background-color: #cc0000; opacity:0.8; color:white;">bibliographical records</mark> and <mark style="background-color: #cc0000; opacity:0.8; color:white;">artifacts</mark> able to describe the same idea: the Battle of Waterloo. They have been chosen from archives, museums and libraries web sites.</p>
+                        <p class="row animate-box" id="itemsDescription">We have collected <mark>10 items</mark>, mixing <mark>archival documents</mark>, <mark>bibliographical records</mark> and <mark>artifacts</mark> able to describe the same idea: the Battle of Waterloo. They have been chosen from archives, museums and libraries web sites.</p>
                         <div class="animate-box">
                            <h4 class="animate-box">PEOPLE: Napoleon</h4>
                            <hr>
@@ -89,20 +89,20 @@
                            <div class="row animate-box" data-animate-effect="fadeInLeft">
                               <div class="col-md-4 col-sm-4 col-xs-6 col-xxs-12 work-item">
                                  <a href="http://www.musee-armee.fr/collections/base-de-donnees-des-collections/objet/redingote-et-bicorne-de-napoleon-ier.html" target="_blank" alt="Rendigote et bicorne de Napoléon Ier">
-                                    <img src="images/work_1.jpg" alt="" class="img-responsive">
+                                    <img src="images/work_1.jpg" alt="Rendigote et bicorne de Napoléon Ier" class="img-responsive">
                                     <h3 class="fh5co-work-title">Rendigote et bicorne de Napoléon Ier</h3>
                                  </a>
                               </div>
                               <div class="col-md-4 col-sm-4 col-xs-6 col-xxs-12 work-item">
                                  <a href="https://www.royalcollection.org.uk/collection/452438-d/letter-of-surrender-from-napoleon-to-the-prince-regent-13-july-1815" target="_blank" alt="Letter of surrender from Napoleon">
-                                    <img src="images/work_2.jpg" alt="" class="img-responsive">
+                                    <img src="images/work_2.jpg" alt="Letter of surrender from Napoleon" class="img-responsive">
                                     <h3 class="fh5co-work-title">Letter of surrender from Napoleon</h3>
                                  </a>
                               </div>
                               <div class="clearfix visible-sm-block"></div>
                               <div class="col-md-4 col-sm-4 col-xs-6 col-xxs-12 work-item">
                                  <a href="https://www.nga.gov/collection/art-object-page.46114.html#overview" target="_blank" alt="The Emperor Napoleon in His Study at the Tuileries">
-                                    <img src="images/work_3.jpg" alt="" class="img-responsive">
+                                    <img src="images/work_3.jpg" alt="The Emperor Napoleon in His Study at the Tuileries" class="img-responsive">
                                     <h3 class="fh5co-work-title">The Emperor Napoleon in His Study at the Tuileries</h3>
                                  </a>
                               </div>
@@ -114,14 +114,14 @@
                               <div class="clearfix visible-md-block"></div>
                               <div class="col-md-4 col-sm-4 col-xs-6 col-xxs-12 work-item">
                                  <a href="http://gallica.bnf.fr/ark:/12148/btv1b84396742.r=waterloo?rk=64378;0" target="_blank" alt="Plan de la bataille de Waterloo">
-                                    <img src="images/work_5.jpg" alt="" class="img-responsive">
+                                    <img src="images/work_5.jpg" alt="Plan de la bataille de Waterloo" class="img-responsive">
                                     <h3 class="fh5co-work-title">Plan de la bataille de Waterloo</h3>
                                  </a>
                               </div>
                               <div class="clearfix visible-sm-block"></div>
                               <div class="col-md-4 col-sm-4 col-xs-6 col-xxs-12 work-item">
                                  <a href="http://www.britishmuseum.org/research/collection_online/collection_object_details.aspx?objectId=684398&partId=1&museumno=1872,0608.198&page=1" target="_blank" alt="The field of Waterloo">
-                                    <img src="images/work_7.jpg" alt="" class="img-responsive">
+                                    <img src="images/work_7.jpg" alt="The field of Waterloo" class="img-responsive">
                                     <h3 class="fh5co-work-title">The field of Waterloo</h3>
                                  </a>
                               </div>
@@ -133,14 +133,14 @@
                               <div class="clearfix visible-md-block visible-sm-block"></div>
                               <div class="col-md-4 col-sm-4 col-xs-6 col-xxs-12 work-item">
                                  <a href="https://catalog.loc.gov/vwebv/search?searchCode=LCCN&searchArg=map54000811&searchType=1&permalink=y" target="_blank" alt="Europe after the Congress of Vienna">
-                                    <img src="images/work_11.jpg" alt="" class="img-responsive">
+                                    <img src="images/work_11.jpg" alt="Europe after the Congress of Vienna" class="img-responsive">
                                     <h3 class="fh5co-work-title">Europe after the Congress of Vienna</h3>
                                  </a>
                               </div>
                               <div class="clearfix visible-sm-block"></div>
                               <div class="col-md-4 col-sm-4 col-xs-6 col-xxs-12 work-item">
                                  <a href="https://portal.dnb.de/opac.htm?method=simpleSearch&reset=true&cqlMode=true&query=partOf%3D1155763890&selectedCategory=any" target="_blank" alt="Tagebuch vom Wiener Kongreß">
-                                    <img src="images/work_13.jpg" alt="" class="img-responsive">
+                                    <img src="images/work_13.jpg" alt="Tagebuch vom Wiener Kongreß" class="img-responsive">
                                     <h3 class="fh5co-work-title">Tagebuch vom Wiener Kongreß</h3>
                                  </a>
                               </div>
@@ -152,20 +152,20 @@
                               <div class="clearfix visible-md-block"></div>
                               <div class="col-md-4 col-sm-4 col-xs-6 col-xxs-12 work-item">
                                  <a href="https://www.ngv.vic.gov.au/explore/collection/work/4408/" target="_blank" alt="The 28th Regiment at Quatre Bras">
-                                    <img src="images/work_12.jpg" alt="" class="img-responsive">
+                                    <img src="images/work_12.jpg" alt="The 28th Regiment at Quatre Bras" class="img-responsive">
                                     <h3 class="fh5co-work-title">The 28th Regiment at Quatre Bras</h3>
                                  </a>
                               </div>
                               <div class="col-md-4 col-sm-4 col-xs-6 col-xxs-12 work-item">
                                  <a href="http://www.musee-armee.fr/collections/base-de-donnees-des-collections/objet/cuirasse-du-carabinier-fauveau.html" target="_blank" alt="Cuirasse du carabinier Fauveau">
-                                    <img src="images/work_8.jpg" alt="" class="img-responsive">
+                                    <img src="images/work_8.jpg" alt="Cuirasse du carabinier Fauveau" class="img-responsive">
                                     <h3 class="fh5co-work-title">Cuirasse du carabinier Fauveau</h3>
                                  </a>
                               </div>
                               <div class="clearfix visible-sm-block"></div>
                               <div class="col-md-4 col-sm-4 col-xs-6 col-xxs-12 work-item">
                                  <a href="http://san.beniculturali.it/web/san/dettaglio-complesso-documentario?codiSanCompl=san.cat.complArch.88660&step=dettaglio&id=88660" target="_blank" alt="Carte di Pasotti Francesco">
-                                    <img src="images/work_10.jpg" alt="" class="img-responsive">
+                                    <img src="images/work_10.jpg" alt="Carte di Pasotti Francesco" class="img-responsive">
                                     <h3 class="fh5co-work-title">Carte di Pasotti Francesco</h3>
                                  </a>
                               </div>
