--- a/rdf.html
+++ b/rdf.html
@@ -94,10 +94,10 @@
                      <p class="animate-box fadeIn animated">
                      <h4>1) PEOPLE - Napoleon</h4>
                      <p class="animate-box fadeIn animated">
-                        <span id="urlMark" style="background-color: #cc0000; opacity:0.8; color:white;">www.semanticweb.org/waterlod/Napoleon</span></li>
+                        <span id="urlMark">www.semanticweb.org/waterlod/Napoleon</span></li>
                      </p>
                      <p>	
-                        <img src="images/xmlnapoleon.jpg" alt="" class="animate-box img-responsive">
+                        <img src="images/xmlnapoleon.jpg" alt="RDF/XML of Napoleon" class="animate-box img-responsive">
                      </p>
                      </p>
                      <p class="animate-box" data-animate-effect="fadeInLeft"><i class="far fa-arrow-alt-circle-right"></i> <span>View the online-version of the <a href="xml/napoleon.xml" target="_blank" alt="RDF/XML of the entity">RDF/XML</a> of this entity here.</span>
@@ -105,10 +105,10 @@
                      <p class="animate-box fadeIn animated">
                      <h4>2) PLACE - Rochefort</h4>
                      <p class="animate-box fadeIn animated">
-                        <span id="urlMark" style="background-color: #cc0000; opacity:0.8; color:white;">www.semanticweb.org/waterlod/Rochefort</span></li>
+                        <span id="urlMark">www.semanticweb.org/waterlod/Rochefort</span></li>
                      </p>
                      <p>
-                        <img src="images/xmlplace.jpg" alt="" class="animate-box img-responsive">
+                        <img src="images/xmlplace.jpg" alt="RDF/XML of Rochefort" class="animate-box img-responsive">
                      </p>
                      </p>
                      <p class="animate-box" data-animate-effect="fadeInLeft"><i class="far fa-arrow-alt-circle-right"></i> <span>View the online-version of the <a href="xml/rochefort.xml" target="_blank" alt="RDF/XML of the entity">RDF/XML</a> of this entity here.</span>
@@ -116,10 +116,10 @@
                      <p class="animate-box fadeIn animated">
                      <h4>3) SUBJECT</h4>
                      <p class="animate-box fadeIn animated">
-                        <span id="urlMark" style="background-color: #cc0000; opacity:0.8; color:white;">www.semanticweb.org/waterlod/Napoleon_surrender</span></li>
+                        <span id="urlMark">www.semanticweb.org/waterlod/Napoleon_surrender</span></li>
                      </p>
                      <p>
-                        <img src="images/xmlconcept.jpg" alt="" class="animate-box img-responsive">
+                        <img src="images/xmlconcept.jpg" alt="RDF/XML of Napoleon Surrender" class="animate-box img-responsive">
                      </p>
                      <p>
                      <p class="animate-box" data-animate-effect="fadeInLeft"><i class="far fa-arrow-alt-circle-right"></i> <span>View the online-version of the <a href="xml/surrender.xml" target="_blank" alt="RDF/XML of the entity">RDF/XML</a> of this entity here.</span>
