--- a/theoretical.html
+++ b/theoretical.html
@@ -65,7 +65,7 @@
                <aside id="fh5co-aside" role="complementary" class="border js-fullheight">
                   <h1 id="fh5co-logo">
                      <a href="index.html" alt="Website logo of Napoleon">
-                     <img src="images/logo.png" alt="">
+                     <img src="images/logo.png" alt="Website logo of Napoleon">
                      </a>
                   </h1>
                   <nav id="fh5co-main-menu" role="navigation">
@@ -135,22 +135,22 @@
                         <p class="animate-box">Here the main problem is to explicitly declare the different roles of a single person that, in turn, can be viewed
                            as single person, family or corporate body. Anyway, a single "person" can be referred as "the creator", "the user"
                            or "the owner" of an item. For these reasons we think that
-                           <mark style="background-color: #cc0000; opacity:0.8; color:white;">EAC-CPF</mark> and
-                           <mark style="background-color: #cc0000; opacity:0.8; color:white;">FOAF</mark> can be used for our purposes.
+                           <mark>EAC-CPF</mark> and
+                           <mark>FOAF</mark> can be used for our purposes.
                         </p>
                         <p class="animate-box">Our thoughs were start with
-                           <mark style="background-color: #cc0000; opacity:0.8; color:white;">FOAF: Friend Of A Friend Ontology</mark>, we have some useful properties to describe real people (eg: Napoleone Bonaparte)
+                           <mark>FOAF: Friend Of A Friend Ontology</mark>, we have some useful properties to describe real people (eg: Napoleone Bonaparte)
                            and some useful general information about the person. It answer to some basic questions like: "
                            <i>What is the gender?</i>" and other questions that aim to get the personal information of a person. But in our case
                            we need informations about entities, not only real person, so we choose not to use FOAF.
                         </p>
                         <p class="animate-box">
-                           <mark style="background-color: #cc0000; opacity:0.8; color:white;">EAC-CPF</mark>, from the archival context, is very useful in order to differentiate the three main types of but the
+                           <mark>EAC-CPF</mark>, from the archival context, is very useful in order to differentiate the three main types of but the
                            most important thing is the role that a person has in relation of the item. Using EAC-CPF we can overpass this lack
                            and add a very useful information (eg: here the questions are "
                            <i>What is the role of this person, releated to the item?</i>" or "
                            <i>Is this person the owner of the item? If yes, what kind of owner is it?</i>"). So, the way is to use
-                           <mark style="background-color: #cc0000; opacity:0.8; color:white;">EAC-CPF</mark>.
+                           <mark>EAC-CPF</mark>.
                         </p>
                         <p class="animate-box">Go back to the
                            <a href="#top" alt="Go back to the questions">questions</a>
@@ -161,7 +161,7 @@
                            to represent it with a name (or alternative names eg: Waterloo in French, Waterlô in Wallon), a country (represented
                            as a country code eg: IT for Italy, FR for France) and finally the couple of latitude and longitude. All of these
                            needs can be handled using the
-                           <mark style="background-color: #cc0000; opacity:0.8; color:white;">GeoNames Ontology</mark>. The choice to use GeoNames is pushed mainly because it is more a De Facto standard.
+                           <mark>GeoNames Ontology</mark>. The choice to use GeoNames is pushed mainly because it is more a De Facto standard.
                         </p>
                         <p class="animate-box">Go back to the
                            <a href="#top" alt="Go back to the questions">questions</a>
@@ -177,8 +177,8 @@
                            Because our idea is cataloged under an historical theme, we do not care about the time, we cannot even find the time on the
                            web (eg we cannot answer to the question "At what time in the morning the Battle of Waterloo has started?"), so our
                            focus is just on dates. The format we need is defined by the
-                           <mark style="background-color: #cc0000; opacity:0.8; color:white;">w3Consortium</mark> under the
-                           <mark style="background-color: #cc0000; opacity:0.8; color:white;">Date and Time formats</mark>, and in particular the format ​DD/MM/YYYY proper of Italy.
+                           <mark>w3Consortium</mark> under the
+                           <mark>Date and Time formats</mark>, and in particular the format ​DD/MM/YYYY proper of Italy.
                         </p>
                         <p class="animate-box">Go back to the
                            <a href="#top" alt="Go back to the questions">questions</a>
@@ -190,14 +190,14 @@
                            concept related to the item. Of course, our model has also to describe the subject/concept proper of an item. Our
                            mission, here, is to describe the item and the concept expressed by the item itself. We raised some questions on this
                            matter, starting from "What is the name of the concept?", "What type of entity is this?", "What is the subject or
-                           theme of item?" or "To which category the concept belongs?" (<mark style="background-color: #cc0000; opacity:0.8; color:white;">(General belongsToCategory Army</mark>).
+                           theme of item?" or "To which category the concept belongs?" (<mark>(General belongsToCategory Army</mark>).
                         </p>
                         <p class="animate-box">
-                           Some of these questions are general and fully handled with the <mark style="background-color: #cc0000; opacity:0.8; color:white;">Dublin Core Metadata Initiative</mark> and <mark style="background-color: #cc0000; opacity:0.8; color:white;">RDF(S)</mark>. The <mark style="background-color: #cc0000; opacity:0.8; color:white;">DC</mark> standard
+                           Some of these questions are general and fully handled with the <mark>Dublin Core Metadata Initiative</mark> and <mark>RDF(S)</mark>. The <mark>DC</mark> standard
                            is the most used because: it is the most functional, its properties are very general and it grants a very high level
-                           of abstraction. <mark style="background-color: #cc0000; opacity:0.8; color:white;">SKOS</mark> is a standard that easily define what exaclty is a concept, so we adopted it in order to give
-                           the right definition of concept. <mark style="background-color: #cc0000; opacity:0.8; color:white;">CIDOC-CRM</mark> is the best way to describe, in a general way, people linked to the concept.
-                           <mark style="background-color: #cc0000; opacity:0.8; color:white;">FOAF</mark>, instead, allows us to introduce how a concept find its material representation (following the idea of <mark style="background-color: #cc0000; opacity:0.8; color:white;">DBPedia</mark>).
+                           of abstraction. <mark>SKOS</mark> is a standard that easily define what exaclty is a concept, so we adopted it in order to give
+                           the right definition of concept. <mark>CIDOC-CRM</mark> is the best way to describe, in a general way, people linked to the concept.
+                           <mark>FOAF</mark>, instead, allows us to introduce how a concept find its material representation (following the idea of <mark>DBPedia</mark>).
                         </p>
                         <p class="animate-box">Go back to the
                            <a href="#top" alt="Go back to the questions">questions</a>
