--- a/about.html
+++ b/about.html
@@ -233,7 +233,7 @@
                               </br>
                               <p>Fabio is graduated in History. He is now attending the Two Years Master Digital Humanities and Digital Knowledge at Alma Mater Studiorum - University of Bologna. His main areas of interest concern Knowledge Organization, Museology, Museography and Virtual Environments.</p>
                               <ul class="fh5co-social" id="teamGithub">
-                                 <li><a href="https://github.com/Fax93" alt="Fabio Mariani"><i class="fab fa-github"></i></a></li>
+                                 <li><a href="https://github.com/FabioMariani" alt="Fabio Mariani"><i class="fab fa-github"></i></a></li>
                               </ul>
                            </div>
                         </div>
